--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@prisma/client": "^6.5.0",
     "app-root-path": "^3.1.0",
     "argon2": "^0.41.1",
+    "bcrypt": "^5.1.1",
     "class": "^0.1.4",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
@@ -51,6 +52,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/fs-extra": "^11.0.4",
