--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/serve-static": "^5.0.3",
+    "@nestjs/swagger": "^11.2.0",
     "@prisma/client": "^6.5.0",
     "app-root-path": "^3.1.0",
     "argon2": "^0.41.1",
     "bcrypt": "^5.1.1",
     "class": "^0.1.4",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "dayjs": "^1.11.13",
@@ -42,6 +44,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "transformer": "^1.2.8"
   },
   "devDependencies": {
